# mupengui

./: .gitignore  BUILD.txt  README.md  build.sh  install.sh  mupengui_0.1-1_amd64.deb
mupengui-0.1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_settingsdialog.cpp  mupengui.desktop  mupengui.pro  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  ui_mainwindow.h  ui_settingsdialog.h
mupengui-0.1/debian/: changelog  control  copyright  files  mupengui.install  mupengui.substvars  postinst  rules
